# CoupledNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
couplednet/: __init__.py  core.py  pdes.py  utils.py
couplednet_minimal/: __init__.py  archs.py  core.py  pdes.py  samplers.py
experiments/: common.py  section_4_1_high_frequency.py  section_4_2_high_dynamic_range.py  section_5_1_high_frequency.py  section_5_2_high_dynamic_range.py
experiments/configs/: section_4_1_16layer.json  section_4_1_24layer.json  section_4_1_8layer.json  section_4_2_default.json  section_5_1_16layer.json  section_5_1_24layer.json  section_5_1_8layer.json  section_5_2_default.json
experiments/configs/reproducible_best/: section_4_1_couplednet_16L_best.json  section_5_1_couplednet_24L_best.json  summary.json
experiments/configs/section_4_1_appendix_baselines/: appendix_baselines_paper.json
experiments/configs/section_4_1_couplednet/: couplednet_24L_best.json  couplednet_4L_best.json  couplednet_8L_best.json  summary.json
experiments/configs/section_5_1_appendix_baselines/: appendix_baselines_paper.json
experiments/configs/section_5_1_couplednet/: couplednet_16L_best.json  couplednet_4L_best.json  couplednet_8L_best.json
experiments/records/: section_5_1_warmup_search_results.json
